wp-content/themes/decimaltenths/src/scss/global/_extends.scss
// ==============================================
// Extends
// ==============================================

// Makes an element visually hidden, but still accessible to keyboards and assistive devices.
%show-for-sr {
	position: absolute !important;
	width: 1px;
	height: 1px;
	padding: 0;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	white-space: nowrap;
	clip-path: inset(50%);
	border: 0;

	&:focus {
		padding: 15px 23px 14px;
		width: auto;
		width: auto;
		clip: auto !important;
		border-radius: 3px;
	}
}

@mixin show-for-sr() {
	position: absolute !important;
	width: 1px;
	height: 1px;
	padding: 0;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	white-space: nowrap;
	clip-path: inset(50%);
	border: 0;

	&:focus {
		padding: 15px 23px 14px;
		width: auto;
		width: auto;
		clip: auto !important;
		border-radius: 3px;
	}
}

// to use when inside breakpoint
@mixin row() {
	max-width: $global-width;
	margin-right: auto;
	margin-left: auto;
	display: flex;
	flex-flow: row wrap;
	// outline: 1px dashed red;
}

%row {
	max-width: $global-width;
	margin-right: auto;
	margin-left: auto;
	display: flex;
	flex-flow: row wrap;
	// outline: 1px dashed red;
}

// to use when inside breakpoint
@mixin column() {
	flex: 1 1 0px;
	padding-right: $medium-spacing;
	padding-left: $medium-spacing;
	min-width: 0;
	// outline: 1px dashed cyan;
}

%column {
	flex: 1 1 0px;
	padding-right: $medium-spacing;
	padding-left: $medium-spacing;
	min-width: 0;
	// outline: 1px dashed cyan;
}

// Typography scale at 1.285
%h1 {
	font-size: var(--size-l-5);

	@include breakpoint(large) {
		font-size: var(--size-l-6);
	}
}

%h2 {
	font-size: var(--size-l-4);

	@include breakpoint(large) {
		font-size: var(--size-l-5);
	}
}

%h3 {
	font-size: var(--size-l-3);

	@include breakpoint(large) {
		font-size: var(--size-l-4);
	}
}

%h4 {
	font-size: var(--size-l-2);

	@include breakpoint(large) {
		font-size: var(--size-l-3);
	}
}

%h5 {
	font-size: var(--size-l-1);

	@include breakpoint(large) {
		font-size: var(--size-l-2);
	}
}

%h6 {
	font-size: var(--size-s-0);

	@include breakpoint(large) {
		font-size: var(--size-l-1);
	}
}

%p {
	font-size: rem-calc(16px);
}

%a {
	line-height: inherit;
	color: inherit;
	text-decoration: none;
	cursor: pointer;
	background-color: transparent;
	transition: all 0.3s;

	&:hover,
	&:focus {
		color: inherit;
	}
}

%a-styled {
	padding-bottom: 1px;
	color: var(--brand-green);
	border-bottom: 1px solid;

	&:hover,
	&:focus {
		border-bottom-color: transparent;
	}
}

%picture {
	position: relative;
	display: block;
	width: 100%;
	height: 100%;
}

%picture-child {
	position: absolute;
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	object-fit: cover;
}

%btn {
    display: inline-block;
	padding: 10px 50px;
	height: 50px;
	font-family: $heading-font;
	letter-spacing: 0.05em;
	text-transform: uppercase;
	background-color: transparent;
	border: 2px solid var(--brand-neon-green);
	border-radius: 50px;
	cursor: pointer;
    color: var(--brand-neon-green);

	&:hover,
	&:focus {
		color: var(--off-black);
		background: var(--brand-neon-green);
	}
}

// Alerts and Errors

%alert {
	display: inline-block;
	margin-bottom: $large-spacing;
	padding: $small-spacing; 
	width: 100%;
	text-align: center;
	color: black;
	font-weight: bold;
	border-radius: 3px;
	border: 1px solid;
}

%tip {
	background-color: $alert-tip;
	border-color: darken($alert-tip, 10%);
}

%success {
	background-color: $alert-success;
	border-color: darken($alert-success, 10%);
}

%error {
	background-color: $alert-error;
	border-color: darken($alert-error, 10%);
}

%warning {
	background-color: $alert-warning;
	border-color: darken($alert-warning, 10%);
}

%info {
	background-color: $alert-info;
	border-color: darken($alert-info, 10%);
}

